[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pct"
dynamic = ["version"]
description = "Perceptual Control Theory with Python"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{name = "Rupert Young", email = "rupert@perceptualrobots.com"}]
keywords = ['pct,', 'control', 'systems,', 'robotics,', 'psychology']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 2 - Pre-Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['numpy>=1.26.0', 'pandas>=1.5.3', 'ghapi', 'packaging', 'ipython', 'imageio', 'imageio-ffmpeg', 'drl_microgrid_ems', 'deprecated', 'pygame', 'plotly', 'matplotlib', 'scipy', 'gym==0.23.1', 'networkx>=2.8.7', 'graphviz', 'jproperties', 'openpyxl', 'comet_ml']

[project.urls]
Repository = "https://github.com/perceptualrobots/pct/tree/master/"
Documentation = "https://perceptualrobots.github.io/pct/"

[project.entry-points.nbdev]
pct = "pct._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "pct.__version__"}

[tool.setuptools.packages.find]
include = ["pct", "pct.*"]

[tool.nbdev]
branch = 'master'
tst_flags = 'gui'
jupyter_hooks = true
custom_sidebar = false
title = 'pct'
